K8s/ecommerce-manifests/ecommerce-manifests/05-pricing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing
  namespace: ecommerce
  labels:
    app: pricing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing
  template:
    metadata:
      labels:
        app: pricing
    spec:
      containers:
        - name: pricing
          image: pjculligan/checkoutdemo-k3s-ready-pricing:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
