K8s/ecommerce-manifests/ecommerce-manifests/06-pricing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing
  namespace: ecommerce
  labels:
    app: pricing
spec:
  selector:
    app: pricing
  ports:
    - name: http
      port: 8080
      targetPort: 8080
