K8s/ecommerce-manifests/ecommerce-manifests/08-inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: ecommerce
  labels:
    app: inventory
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 8080
      targetPort: 8080
