K8s/ecommerce-manifests/ecommerce-manifests/10-checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: ecommerce
  labels:
    app: checkout
spec:
  selector:
    app: checkout
  ports:
    - name: http
      port: 8080
      targetPort: 8080
