K8s/ecommerce-manifests/ecommerce-manifests/12-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ecommerce
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
