K8s/ecommerce-manifests/ecommerce-manifests/13-keda-externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-add-ons-http-interceptor-proxy
  namespace: ecommerce
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - name: http
      port: 8080
      targetPort: 8080
