K8s/ecommerce-manifests/ecommerce-manifests/15-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: ecommerce
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /checkout
            pathType: Prefix
            backend:
              service:
                name: keda-add-ons-http-interceptor-proxy
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
